--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <!-- Testing loading local csv -->
+    <!-- <script>
+        var csv_path="{{ url_for('static', filename='data/data.csv') }}"
+    </script> -->
     <div class="container">
         <div class="jumbotron" style="text-align: center">
             <h1>Pet Pal</h1>
