--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <!-- Testing loading local csv -->
-    <!-- <script>
+    <script>
         var csv_path="{{ url_for('static', filename='data/data.csv') }}"
-    </script> -->
+    </script>
     <div class="container">
         <div class="jumbotron" style="text-align: center">
             <h1>Pet Pal</h1>
